--- a/gb/22/4/1/n13688930.md
+++ b/gb/22/4/1/n13688930.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【更新4.1】俄军缓慢撤出乌克兰北部地区</h2>
-<a href="https://ddpul9mprf1bn.cloudfront.net/Y6dAJ6gcf"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d124e4v75n9sum.cloudfront.net/J4wAJ6gcz"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>2022年3月29日，一名乌克兰军人在东北部城市特罗斯蒂亚涅茨的一辆被摧毁的俄罗斯坦克。(Fadel Senna / AFP)
 </h6>
 <hr>
@@ -17,10 +17,10 @@
 <p>目前尚不清楚平民是否已经从马里乌波尔撤离，或者他们之前是否自己逃离了这座城市，然后被公共汽车带到了位于西北部的扎波罗热。</p>
 <p>早些时候，红十字会表示，周五派往帮助从马里乌波尔疏散数千名平民的小组被迫折返。</p>
 <p>红十字国际委员会在一份声明中表示，该小组“今天没有到达马里乌波尔，也没有为平民的安全通行提供便利”，并补充说他们已经折返至200多公里外的扎波罗热。</p>
-<p>周六，红十字会车队将再次尝试从被围困的马里乌波尔港撤离平民。<br />
-<figure id="attachment_13651520" aria-describedby="caption-attachment-13651520" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13651520-GettyImages-1239238748.jpg"><img src="https://i.epochtimes.com/assets/uploads/2022/03/id13651520-GettyImages-1239238748-600x400.jpg" alt="" width="600" b="400" class="size-large wp-image-13651520" /></a><figcaption id="caption-attachment-13651520" class="wp-caption-text">2022年3月16日，撤离马里乌波尔的人员抵达扎波罗热市郊区一个购物中心的停车场，一名妇女忍不住伤心哭泣。该停车场现在是一个流离失所者登记中心。(EMRE CAYLAK/AFP via Getty Images)</figcaption></figure></p>
+<p>周六，红十字会车队将再次尝试从被围困的马里乌波尔港撤离平民。</p>
+<figure id="attachment_13651520" aria-describedby="caption-attachment-13651520" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13651520-GettyImages-1239238748.jpg"><img class="size-large wp-image-13651520" src="https://i.epochtimes.com/assets/uploads/2022/03/id13651520-GettyImages-1239238748-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13651520" class="wp-caption-text">2022年3月16日，撤离马里乌波尔的人员抵达扎波罗热市郊区一个购物中心的停车场，一名妇女忍不住伤心哭泣。该停车场现在是一个流离失所者登记中心。(EMRE CAYLAK/AFP via Getty Images)</figcaption></figure>
 <h3>俄罗斯军方：袭击了乌克兰的一大型炼油厂</h3>
-<p>据CNN报导，乌克兰军方发言人称，俄罗斯军队在周六上午的一系列袭击中瞄准了乌克兰的一个主要炼油厂。</p>
+<p>据CNN报导，俄罗斯军队在周六上午的一系列袭击中瞄准了乌克兰的一个主要炼油厂。</p>
 <p>俄罗斯国防部发言人伊戈尔·科纳申科夫(Igor Konashenkov)少将在周六的简报中说，位于乌克兰中部城市克雷门丘克（Kremenchuk）的炼油厂被“高精度远程空基和海基武器”击中。</p>
 <p>科纳申科夫说，俄罗斯军方摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>科纳申科夫说，俄罗斯还使用高精度空基导弹袭击了克雷门丘克以东的城市波尔塔瓦（Poltava）和第聂伯罗（Dnipro）的军用机场。</p>
@@ -71,7 +71,7 @@
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">Latest Defence Intelligence update on the situation in Ukraine &#8211; 1 April 2022</p>
 <p>Find out more about the UK government&#8217;s response: <ahref="https://t.co/S4wVaMZtga">https://t.co/S4wVaMZtga</a></p>
-<p><ahref="https://twitter.com/hashtag/StandWithUkraine?src=hash&amp;ref_src=twsrc%5Etfw">#StandWithUkraine</a> <ahref="https://t.co/kVwPTxk4xF"></a><a href="https://ddpul9mprf1bn.cloudfront.net/Y6dAJ6gcf"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="kVwPTxk4xF</a></p>
+<p><ahref="https://twitter.com/hashtag/StandWithUkraine?src=hash&amp;ref_src=twsrc%5Etfw">#StandWithUkraine</a> <ahref="https://t.co/kVwPTxk4xF"></a><a href="https://d124e4v75n9sum.cloudfront.net/J4wAJ6gcz"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="kVwPTxk4xF</a></p>
 <p>— Ministry of Defence? (@DefenceHQ) <ahref="https://twitter.com/DefenceHQ/status/1509999958988103683?ref_src=twsrc%5Etfw">April 1, 2022</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <h3>乌国防部拒绝进一步评论俄燃料库火灾</h3>
@@ -170,7 +170,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li><hr>
 
 
 <strong>热门新闻：</strong>
